Correção de conteúdo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="hero is-medium is-primary is-bold has-text-centered is-long">
         <div class="hero-body">
             <div class="container">
-                <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">Olá, meu nome é Luiz! Prazer em conhecê-lo (a).</h1>
+                <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">Olá, meu nome é Luiz!</h1>
                 <h2 class="subtitle is-size-5-desktop">Atuo com desenvolvimento de sistemas há mais de 4 anos e já vivenciei diversas situações e perrengues nesse
                     trajeto. A plataforma que possuo maior domínio é .NET, mas me sinto totalmente confortável em atuar com
                     outras plataformas.</h2>
